--- a/initial.ipynb
+++ b/initial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxcLLD/AOdxPBBq8reWS5z",
+      "authorship_tag": "ABX9TyMpSfOZ9DCeyxbGCfjOXb3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "0e-QNAO54Grb"
+        "id": "0e-QNAO54Grb",
+        "outputId": "a4b282ce-5ed5-4bda-d275-a7fed5cdd157",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello colab!\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello colab!\")"
+      ]
     }
   ]
 }
